# demoengine

./: .gitignore  .gitmodules  CMakeLists.txt  License.md  test.ff
.cache/clangd/index/: swtebf.cpp.6B2A2345D2975B0E.idx  swtebf.hpp.ADC7A45AF3D2A5E6.idx
.github/workflows/: cmake.yml
CMake/lib/: glfw3.lib
LICENSE.md/: LICENSE.md
engine/: CMakeLists.txt
engine/include/: demoengine.h  demoengine.hpp  ecs.h  farbfeld.hpp  log.hpp  logSystem.hpp  render.hpp  swt.hpp  swtebf.hpp  types.hpp
engine/include/glad/: glad.h
engine/modules/: CMakeLists.txt
engine/modules/ecs/: CMakeLists.txt
engine/modules/ecs/include/: ecs.h
engine/modules/ecs/src/: ecs.c
engine/modules/example/: CMakeLists.txt
engine/modules/example/include/: example.h
engine/modules/example/src/: example.c
engine/modules/farbfeld/: CMakeLists.txt
engine/modules/farbfeld/src/: farbfeld.c
engine/modules/log_system/: CMakeLists.txt
engine/modules/log_system/include/: logSystem.h
engine/modules/log_system/src/: logSystem.c
engine/modules/logsystem/: CMakeLists.txt
engine/modules/logsystem/include/: logsystem.h  nologsystem.h
engine/modules/logsystem/src/: logsystem.c
engine/modules/physic/: CMakeLists.txt
engine/modules/physic/include/: physic.h
engine/modules/physic/src/: physic.c
engine/modules/render/: CMakeLists.txt
engine/modules/render/include/: render.h
engine/modules/render/include/glad/: glad.h
engine/modules/render/src/: glad.c  render.c
engine/src/: demoengine.c  demoengine.cpp  ecs.c  farbfeld.cpp  glLoader.cpp  glad.c  log.cpp  logSystem.cpp  main.cpp  render.cpp  swtebf.cpp
engine/src/opengl/: render.cpp
engine/src/render/: LOpenGL.h  LTexture.cpp  LUtil.cpp  LUtil.h  render.cpp
examples/: CMakeLists.txt
examples/platformer/: CMakeLists.txt  main.c  main.cpp
include/: glLoader.h  swt.hpp
include/glad/: glad.h
src/: glLoader.c  glad.c  main.cpp
